[feature] Дополнен конвертер валют